--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-adtakeover (1.0.10-50) unstable; urgency=medium
+
+  * Handle different case spelling of domainname in sysvol directory
+    (Bug #35769)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 02 Sep 2014 17:58:23 +0200
+
 univention-management-console-module-adtakeover (1.0.10-49) unstable; urgency=medium
 
   * Handle different case spelling of domainname in sysvol directory
