--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-41) unstable; urgency=low
+
+  * Prevent double registration (Bug #35711)
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 03 Sep 2014 09:47:40 +0200
+
 univention-management-console-frontend (3.0.152-40) unstable; urgency=medium
 
   * Bug #34484: fixed class name of RadioButton
