* Prevent double registration (Bug #35711)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53278 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-55) unstable; urgency=low
+
+  * Prevent double registration (Bug #35711)
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 03 Sep 2014 09:38:07 +0200
+
 univention-system-setup (7.0.69-54) unstable; urgency=low
 
   * Do not show Firefox data submission policy popup during 
