* Prevent double registration (Bug #35711)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53285 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.35-4) unstable; urgency=low
+
+  * Prevent double registration (Bug #35711) 
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 03 Sep 2014 10:40:42 +0200
+
 univention-system-setup (8.0.35-3) unstable; urgency=low
 
   * Bug #33839: Wording
