--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.13-1) unstable; urgency=medium
+
+  * Fix another automountInformation split error (Bug #34541)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 03 Sep 2014 10:41:55 +0200
+
 univention-directory-manager-modules (10.0.12-1) unstable; urgency=medium
 
   * Don't break UDM if more than one : is set in automountInformation
