* Bug #34333: failures on report creation can not block UMC usage anymore
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53290 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.0.4-1) unstable; urgency=low
+
+  * Bug #34333: failures on report creation can not block UMC usage anymore
+
+ -- Florian Best <best@univention.de>  Wed, 03 Sep 2014 12:54:09 +0200
+
 univention-management-console-module-udm (5.0.3-2) unstable; urgency=low
 
   * merged changes from 3.2-2 (Bug #34091)
