--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.6-6) unstable; urgency=low
+
+  * Added a missing / to the symlink (Bug #35078)
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 03 Sep 2014 12:54:13 +0200
+
 univention-nagios (7.0.6-5) unstable; urgency=low
 
   * FIX broken apache config (Bug #35078)
