* added a missing / to the symlink (Bug #35078)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53294 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (8.0.0-3) unstable; urgency=low
+
+  * added a missing / to the symlink (Bug #35078)
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 03 Sep 2014 12:49:07 +0200
+
 univention-nagios (8.0.0-2) unstable; urgency=low
 
   * FIX broken apache config (Bug #35078)
