--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-42) unstable; urgency=low
+
+  * Using tools.isTrue instead of Boolean (Bug #35711)
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 03 Sep 2014 13:51:30 +0200
+
 univention-management-console-frontend (3.0.152-41) unstable; urgency=low
 
   * Prevent double registration (Bug #35711)
