--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.1-3) unstable; urgency=low
+
+  * Fixed last two python2.6 entries (Bug #35664)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 03 Sep 2014 16:22:22 +0200
+
 ucs-test (5.0.1-2) unstable; urgency=low
 
   * Changed remaining occurrences of "python2.6" inside testscripts to "python2.7"
