* Added a locking table to avoid overwrites from objects which have   been synchronized half (Bug #35391)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53306 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (9.0.5-1) unstable; urgency=medium
+
+  * Added a locking table to avoid overwrites from objects which have
+    been synchronized half (Bug #35391)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 03 Sep 2014 16:21:51 +0200
+
 univention-s4-connector (9.0.4-6) unstable; urgency=medium
 
   * Call samba-ad-dc init script instead of samba4 (Bug #35319)
