* Feedback from QA (Bug #35602)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53317 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-72) unstable; urgency=medium
+
+  * Feedback from QA (Bug #35602)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 03 Sep 2014 17:08:48 +0200
+
 univention-ad-connector (8.0.17-71) unstable; urgency=medium
 
   * Fixed guess_ad_domain_language function() and call it after the ssl
