--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (9.0.2-1) unstable; urgency=medium
+
+  * Feedback from QA (Bug #35602)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 03 Sep 2014 17:09:16 +0200
+
 univention-ad-connector (9.0.1-1) unstable; urgency=medium
 
   * Fixed guess_ad_domain_language function() and call it after the ssl
