* Windows NETBIOS domain names can be up to 15 characters long   (Bug #35599)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53322 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/umc/python/setup/de.po
+++ b/base/univention-system-setup/umc/python/setup/de.po
@@ -245,8 +245,8 @@ msgstr "Die Länge von System- und Domänennamen ist größer als 63 Zeichen."
 
 #: umc/python/setup/__init__.py:400
 msgid ""
-"The length of the windows domain name needs to be smaller than 14 characters."
-msgstr "Die Länge des Windows Domain Names ist größer als 14 Zeichen."
+"The windows domain name cannot be longer than 15 characters."
+msgstr "Der Windows-Domänenname darf nicht länger als 15 Zeichen sein."
 
 #: umc/python/setup/__init__.py:427
 msgid "The primary network device must exist."
