--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-56) unstable; urgency=medium
+
+  * Windows NETBIOS domain names can be up to 15 characters long
+    (Bug #35599)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 03 Sep 2014 18:03:44 +0200
+
 univention-system-setup (7.0.69-55) unstable; urgency=low
 
   * Prevent double registration (Bug #35711)
