* Windows NETBIOS domain names can be up to 15 characters long   (Bug #35599)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53323 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.36-1) unstable; urgency=low
+
+  * Windows NETBIOS domain names can be up to 15 characters long
+    (Bug #35599)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 03 Sep 2014 18:05:36 +0200
+
 univention-system-setup (8.0.35-4) unstable; urgency=low
 
   * Prevent double registration (Bug #35711) 
