* Always cleanup the locking table when the sync was successful   (Bug #35391)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53329 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-75) unstable; urgency=medium
+
+  * Always cleanup the locking table when the sync was successful
+    (Bug #35391)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 04 Sep 2014 06:26:12 +0200
+
 univention-s4-connector (8.0.33-74) unstable; urgency=medium
 
   * Removed MOD_DELETE for con_other_attribute during ldap add 
