--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (9.0.8-1) unstable; urgency=medium
+
+  * Don't remove group members if the group exists during the first sync
+    on both sides (Bug #33319)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 04 Sep 2014 07:15:05 +0200
+
 univention-s4-connector (9.0.7-1) unstable; urgency=medium
 
   * Always cleanup the locking table when the sync was successful
