* Fixed typo in last commit (Bug #33319)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53338 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-77) unstable; urgency=medium
+
+  * Fixed typo in last commit (Bug #33319)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 04 Sep 2014 08:23:04 +0200
+
 univention-s4-connector (8.0.33-76) unstable; urgency=medium
 
   * Don't remove group members if the group exists during the first sync
