--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (9.0.9-1) unstable; urgency=medium
+
+  * Fixed typo in last commit (Bug #33319)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 04 Sep 2014 08:23:04 +0200
+
 univention-s4-connector (9.0.8-1) unstable; urgency=medium
 
   * Don't remove group members if the group exists during the first sync
