* Fixed non-leaf exception handling (Bug #27290)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53344 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-78) unstable; urgency=medium
+
+  * Fixed non-leaf exception handling (Bug #27290)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 04 Sep 2014 10:27:25 +0200
+
 univention-s4-connector (8.0.33-77) unstable; urgency=medium
 
   * Fixed typo in last commit (Bug #33319)
