Adapted the changelog (Bug #34765)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53345 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-supphealth/debian/changelog
+++ b/management/univention-management-console-module-supphealth/debian/changelog
@@ -1,6 +1,6 @@
 univention-management-console-module-supphealth (1.0.0-1) unstable; urgency=low
 
-  * Non-maintainer upload.
+  * Starting UCS 4.0-0 development (Bug #34765)
 
  -- Alexander Kramer <kramer@univention.de>  Wed, 03 Sep 2014 16:09:00 +0200
 
