--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (9.0.10-1) unstable; urgency=medium
+
+  * Fixed non-leaf exception handling (Bug #27290)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 04 Sep 2014 10:27:25 +0200
+
 univention-s4-connector (9.0.9-1) unstable; urgency=medium
 
   * Fixed typo in last commit (Bug #33319)
