--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-76) UNRELEASED; urgency=medium
+
+  * 52_s4connector/138sync_gpo: added test case for GPO creation and
+    deletion (Bug #27290)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 04 Sep 2014 10:29:47 +0200
+
 ucs-test (4.0.166-75) unstable; urgency=medium
 
   * 52_s4connector/101sync_initial_membership_ad_to_ucs: create one
