--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,4 +1,4 @@
-ucs-test (4.0.166-76) UNRELEASED; urgency=medium
+ucs-test (4.0.166-76) unstable; urgency=medium
 
   * 52_s4connector/138sync_gpo: added test case for GPO creation and
     deletion (Bug #27290)
