* check sync_mode in post_con_modify_functions     object_memberships_sync* (Bug #35251)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53359 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-79) unstable; urgency=low
+
+  * check sync_mode in post_con_modify_functions 
+    object_memberships_sync* (Bug #35251)
+
+ -- Felix Botner <botner@univention.de>  Thu, 04 Sep 2014 13:10:04 +0200
+
 univention-s4-connector (8.0.33-78) unstable; urgency=medium
 
   * Fixed non-leaf exception handling (Bug #27290)
