* Bug #35815: fix reloading of settings and displaying of messages after saving settings in basic settings module
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@53361 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-51) unstable; urgency=low
+
+  * Bug #35815: fix reloading of settings and displaying of messages
+    after saving settings in basic settings module
+
+ -- Florian Best <best@univention.de>  Thu, 04 Sep 2014 13:17:33 +0200
+
 univention-system-setup (7.0.69-50) unstable; urgency=low
 
   * Bug #34484: Fixed changing locale during session
