--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.37-1) unstable; urgency=low
+
+  * Bug #35815: fix reloading of settings and displaying of messages
+    after saving settings in basic settings module
+
+ -- Florian Best <best@univention.de>  Thu, 04 Sep 2014 13:17:40 +0200
+
 univention-system-setup (8.0.36-1) unstable; urgency=low
 
   * Windows NETBIOS domain names can be up to 15 characters long
