* Bug #35815: fix reloading of settings and displaying of messages after saving settings in basic settings module
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53362 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-57) unstable; urgency=low
+
+  * Bug #35815: fix reloading of settings and displaying of messages
+    after saving settings in basic settings module
+
+ -- Florian Best <best@univention.de>  Thu, 04 Sep 2014 13:17:43 +0200
+
 univention-system-setup (7.0.69-56) unstable; urgency=medium
 
   * Windows NETBIOS domain names can be up to 15 characters long
