--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (9.0.11-1) unstable; urgency=low
+
+  * check sync_mode in post_con_modify_functions 
+    object_memberships_sync* (Bug #35251)
+
+ -- Felix Botner <botner@univention.de>  Thu, 04 Sep 2014 13:49:48 +0200
+
 univention-s4-connector (9.0.10-1) unstable; urgency=medium
 
   * Fixed non-leaf exception handling (Bug #27290)
