Bug #35808,Bug #35826: Kernel update for Xen & KVM
Add YAML files.
Update to the latest kernel build.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53370 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (7.0.0-15) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #35808, Bug #35826)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 04 Sep 2014 15:00:13 +0200
+
 univention-kernel-image (7.0.0-14) unstable; urgency=low
 
   * Update to the latest kernel build (Bug #35226).
