--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.5-1) unstable; urgency=low
+
+  * Bug #35664: Fix python-apt API change
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 04 Sep 2014 15:30:39 +0200
+
 ucs-test (5.0.4-1) unstable; urgency=medium
 
   * 52_s4connector/138sync_gpo: added test case for GPO creation and
