--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (2.0.1-3) unstable; urgency=medium
+
+  * Rename sysvol domain directory to AD spelling (Bug #35769)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 04 Sep 2014 15:47:14 +0200
+
 univention-management-console-module-adtakeover (2.0.1-2) unstable; urgency=medium
 
   * Handle different case spelling of domainname in sysvol directory
