Bug #35637 base: install univention-archive-key by default
Otherwise installing new packages during d-i print the warning.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53378 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.3-1) unstable; urgency=low
+
+  * Bug #35637: install univention-archive-key by default
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 04 Sep 2014 16:20:15 +0200
+
 univention-base-files (4.0.2-1) unstable; urgency=low
 
   * Update to UCR templates to new upstream versions (Bug #35138)
