Bug #35708 base: Enable secure APT by default
d-i DVDs are already signed.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53379 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,6 +1,7 @@
 univention-base-files (4.0.3-1) unstable; urgency=low
 
   * Bug #35637: install univention-archive-key by default
+  * Bug #35708: Enable secure APT by default
 
  -- Philipp Hahn <hahn@univention.de>  Thu, 04 Sep 2014 16:20:15 +0200
 
