--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (7.0.1-8) unstable; urgency=medium
+
+  * Skip replicated MEMBEROF attribute (Bug #35480)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 04 Sep 2014 17:07:16 +0200
+
 univention-directory-replication (7.0.1-7) unstable; urgency=low
 
   * rerun listener handler with listener_old (Bug #34759) 
