--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (8.0.1-1) unstable; urgency=medium
+
+  * Skip replicated MEMBEROF attribute (Bug #35480)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 04 Sep 2014 17:24:37 +0200
+
 univention-directory-replication (8.0.0-3) unstable; urgency=low
 
   * fixed BUILTIN_OIDS (Bug #35144) 
