* Set "force printername" in cups-printers listener (Bug #33505)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53390 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (7.0.11-2) unstable; urgency=medium
+
+  * Set "force printername" in cups-printers listener (Bug #33505)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 04 Sep 2014 17:42:50 +0200
+
 univention-printserver (7.0.11-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
