--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.1-1) unstable; urgency=medium
+
+  * Set "force printername" in cups-printers listener (Bug #33505)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 04 Sep 2014 17:44:37 +0200
+
 univention-printserver (8.0.0-4) unstable; urgency=medium
 
   * Call samba-ad-dc init script instead of samba4 (Bug #35319)
