Bug #30751 test: 00_base/99check_log_files
Increment Debian version number for build.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53398 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-77) unstable; urgency=low
+
+  * Bug #30751: 00_base/99check_log_files
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 05 Sep 2014 13:31:56 +0200
+
 ucs-test (4.0.166-76) unstable; urgency=medium
 
   * 52_s4connector/138sync_gpo: added test case for GPO creation and
