--- a/management/univention-management-console-module-ipchange/debian/changelog
+++ b/management/univention-management-console-module-ipchange/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-ipchange (3.0.0-3) unstable; urgency=low
+
+  * Bug #35145: remove module category as this module is only for backend purpose
+
+ -- Florian Best <best@univention.de>  Fri, 05 Sep 2014 13:45:53 +0200
+
 univention-management-console-module-ipchange (3.0.0-2) unstable; urgency=low
 
   * Bug #35145: update copyrights
