--- a/virtualization/univention-virtual-machine-manager-schema/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-schema (5.0.1-2) unstable; urgency=low
+
+  * Fix default container for cloud connections (Bug #32842)
+  * Cloud type is now a required attribute
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 05 Sep 2014 15:37:00 +0200
+
 univention-virtual-machine-manager-schema (5.0.1-1) unstable; urgency=low
 
   * Add schema for UVMM Cloud Connection and Type (Bug #32842)
