--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,13 @@
+univention-virtual-machine-manager-daemon (4.0.0-7) unstable; urgency=low
+
+  * WIP: Integration of cloud instance management with libcloud (Bug #32842)
+   - Read and add connections from ldap
+   - Improve query behavior
+   - Implement update_expensive
+   - Cache connections locally
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 05 Sep 2014 15:47:38 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-6) unstable; urgency=low
 
   * Add python-libcloud dependency (Bug #32842) 
