--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (7.0.1-9) unstable; urgency=medium
+
+  * Add MEMBEROF to the EXCLUDE_ATTRIBUTES list (Bug #35480)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 08 Sep 2014 11:17:23 +0200
+
 univention-directory-replication (7.0.1-8) unstable; urgency=medium
 
   * Skip replicated MEMBEROF attribute (Bug #35480)
