* Improve error handling when loading ldap connections (Bug #32842)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53421 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-8) unstable; urgency=low
+
+  * Improve error handling when loading ldap connections (Bug #32842) 
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 08 Sep 2014 11:52:36 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-7) unstable; urgency=low
 
   * WIP: Integration of cloud instance management with libcloud (Bug #32842)
