--- a/virtualization/univention-virtual-machine-manager-schema/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-schema (5.0.1-3) unstable; urgency=low
+
+  * Fix default container for cloud type (Bug #32842)
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 08 Sep 2014 11:55:45 +0200
+
 univention-virtual-machine-manager-schema (5.0.1-2) unstable; urgency=low
 
   * Fix default container for cloud connections (Bug #32842)
