--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-59) unstable; urgency=low
+
+  * Fixed wrong variable name in univention-system-setup (Bug #34090)
+
+ -- Drees Dormann <dormann@univention.de>  Mon, 08 Sep 2014 12:04:22 +0200
+
 univention-system-setup (7.0.69-58) unstable; urgency=low
 
   * UMC now warns the user if DHCP is selected but instead of a lease
