--- a/management/univention-directory-notifier/debian/changelog
+++ b/management/univention-directory-notifier/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-notifier (8.0.1-2) unstable; urgency=medium
+
+  * Fix quoting in previous change (Bug #35723)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 08 Sep 2014 15:16:19 +0200
+
 univention-directory-notifier (8.0.1-1) unstable; urgency=low
 
   * The notifier join script now waits for the first initialization of
