--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.99-5) unstable; urgency=low
+
+  * Bug #35711: Added variable creation to __init__.py
+
+ -- Alexander Kramer <kramer@univention.de>  Mon, 08 Sep 2014 15:31:38 +0200
+
 univention-management-console-module-udm (4.0.99-4) unstable; urgency=medium
 
   * Bug #35580: fix handling of license LDIF files to allow for long DNs
