--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.37-2) unstable; urgency=low
+
+  * Bug #35711: Removed the variable creation
+
+ -- Alexander Kramer <kramer@univention.de>  Mon, 08 Sep 2014 15:41:00 +0200
+
 univention-system-setup (8.0.37-1) unstable; urgency=low
 
   * Bug #35815: fix reloading of settings and displaying of messages
