generate-appliance (0.1.1-0) unstable; urgency=medium
  * Add --tempdir (Bug #35756)
  * Unify OVA VMDKs

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53440 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/generate-appliance/debian/changelog
+++ b/test/generate-appliance/debian/changelog
@@ -1,3 +1,10 @@
+generate-appliance (0.1.1-0) unstable; urgency=medium
+
+  * Add --tempdir (Bug #35756)
+  * Unify OVA VMDKs
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Mon, 08 Sep 2014 15:51:06 +0200
+
 generate-appliance (0.1.0-0) unstable; urgency=medium
 
   * Add ESXi support (Bug #35756)
