--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,11 @@
+univention-directory-listener (8.0.4-1) unstable; urgency=medium
+
+  * Do atomic locking on the cache (Bug #34013)
+  * Avoid double-freeing the cache database cursor
+  * Let the exit_handler flag and skip if he is running already
+
+ -- Arvid Requate <requate@univention.de>  Mon, 08 Sep 2014 17:50:13 +0200
+
 univention-directory-listener (8.0.3-1) unstable; urgency=low
 
   * Retry update after delete by UUID (Bug #35261)
