* Do atomic locking on the cache (Bug #34013) * Avoid double-freeing the cache database cursor * Let the exit_handler flag and skip if he is running already
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53451 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-listener/debian/changelog
+++ b/management/univention-directory-listener/debian/changelog
@@ -1,3 +1,11 @@
+univention-directory-listener (9.0.2-1) unstable; urgency=medium
+
+  * Do atomic locking on the cache (Bug #34013)
+  * Avoid double-freeing the cache database cursor
+  * Let the exit_handler flag and skip if he is running already
+
+ -- Arvid Requate <requate@univention.de>  Mon, 08 Sep 2014 17:52:11 +0200
+
 univention-directory-listener (9.0.1-1) unstable; urgency=medium
 
   * Use python support (Bug #35144)
