--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.6-1) unstable; urgency=medium
+
+  * Added missing file: tests/52_s4connector/138sync_gpo (Bug #27290)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 08 Sep 2014 21:17:27 +0200
+
 ucs-test (5.0.5-1) unstable; urgency=low
 
   * Bug #35664: Fix python-apt API change
