* Changed quoting in 15univention-directory-notifier-post.inst   (Bug #35723)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53457 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-notifier/debian/changelog
+++ b/management/univention-directory-notifier/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-notifier (8.0.2-1) unstable; urgency=medium
+
+  * Changed quoting in 15univention-directory-notifier-post.inst
+    (Bug #35723)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 08 Sep 2014 21:49:28 +0200
+
 univention-directory-notifier (8.0.1-2) unstable; urgency=medium
 
   * Fix quoting in previous change (Bug #35723)
